Migrate gradle plugin to gradleup shadow 9.6.1 and tidy up
- Switch shadow dependency from com.github.johnrengelman:shadow:8.1.1 to
  com.gradleup.shadow 9.6.1, update SimpleRelocator to the new internal
  getter names, and guard getRelocators() with getOrElse
- Register the generated metadata directory as a main resource source at
  configuration time instead of mutating the source set during task
  execution; pass it into LibrarianTask as a Provider<Directory>
- Replace deprecated Project.getBuildDir() with the build layout API
- Simplify checksum reading via Files.readAllBytes and drop the redundant
  createNewFile call
- Make LibrarianExtension list fields final and de-duplicate the extension
  lookup
- Drop unused JUnit test dependencies and the stale hello-world javadoc